infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sumanthportfolio
  labels:
    app.kubernetes.io/name: portfolio-app
