infra/k8s/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-api-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: backend
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30004
