infra/k8s/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-web-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3000
      nodePort: 30002
