infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: portfolio.test
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-api-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-web-service
                port:
                  number: 3002
